CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT_DETAIL__c.object
<CustomObject>
    <description>Detail information about sub payment, payment corrections</description>
    <fields>
        <fullName>AMT_PMT_DETAIL_ADJMT__c</fullName>
        <description>Amount</description>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS_DETAIL_PMT_ADJMT__c</fullName>
        <defaultValue>&apos;3&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00716</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment</description>
        <label>Adjustment</label>
        <referenceTo>T_ADJMT__c</referenceTo>
        <relationshipLabel>Adjustment Payment Details</relationshipLabel>
        <relationshipName>AdjustmentPaymentDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_DETAIL_ADJMT_NON__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Non Adjustment Detail</description>
        <label>Non Adjustment Detail</label>
        <referenceTo>T_NON_ADJMT_DETAIL__c</referenceTo>
        <relationshipLabel>Non Adjustment details</relationshipLabel>
        <relationshipName>Non_Adjustment_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_DETAIL_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment Detail</description>
        <label>Adjustment Detail</label>
        <referenceTo>T_ADJMT_DETAIL__c</referenceTo>
        <relationshipLabel>Adjustment Details</relationshipLabel>
        <relationshipName>Adjustment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PMT_ADJMT_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>Adjustment Payment ID external</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PMT_ADJMT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Adjustment Payment</description>
        <label>Adjustment Payment</label>
        <referenceTo>T_ADJMT_PMT__c</referenceTo>
        <relationshipLabel>Adjustment Payment Detail</relationshipLabel>
        <relationshipName>Adjustment_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Adjustment Payment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Payment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>