CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT_DETAIL__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CDE_STATUS_DETAIL_PMT_ADJMT__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>