CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT_DETAIL__c/listViews/Datafix_user.listView-meta.xml
<ListView>
    <fullName>Datafix_user</fullName>
    <columns>NAME</columns>
    <columns>IDN_ADJMT__c</columns>
    <columns>IDN_PMT_ADJMT__c</columns>
    <columns>AMT_PMT_DETAIL_ADJMT__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CDE_STATUS_DETAIL_PMT_ADJMT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Datafix user</label>
</ListView>