CHATS_SIT/force-app/main/default/objects/T_ADJMT_PMT_DETAIL__c/listViews/Datafix_View.listView-meta.xml
<ListView>
    <fullName>Datafix_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>138886</value>
    </filters>
    <label>Datafix View</label>
</ListView>